added all photos for loogs

--- a/portraits-loog-a-day.html
+++ b/portraits-loog-a-day.html
@@ -51,12 +51,6 @@
         </div>
     </nav>
 
-    <!-- champion image -->
-    <!--<div id="pic1" class="project-jumbotron project-starbucks-img">
-
-
-    </div>-->
-
 
     <div class="container">
 
@@ -65,7 +59,7 @@
         <div class="row">
             <div class="container">
                 <p class="cta-back">
-                    <a href="../index.html#selectedProjects" role="button">Back to homepage</a>
+                    <a href="../index.html" role="button">Back to homepage</a>
                 </p>
                 <h1>Loog a day</h1>
                 <h4>A personal project by Loogart where we create one pop icon caricature per day. The challenge behind these mini portraits consists of producing a quick design with the best possible likeness using minimal lines, colors and visual features. Some are animated, some are simply illustrated.</h4>
@@ -78,24 +72,26 @@
         <section class="loog-collection">
 
             <div class="row">
-
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/loog-elvis-presley.gif" alt="Animated portrait of Elvis Presley by Loogart" title="Elvis Presley" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-byebama.gif" alt="Animated portrait Obama saying bye, Trump saying hi" title="Oba-bye" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/loog-ronald-mcdonald.gif" alt="Animated portrait of Ronald McDonalds by Loogart" title="Ronald McDonald" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-elvis-presley-hires.gif" alt="Animated portrait of Elvis Presley by Loogart" title="Elvis Presley" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/loog-colonel-sanders-kfc.gif" alt="Animated portrait of KFC's Colonel Sanders by Loogart" title="Colonel Sanders" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-ronald-mcdonald-hires.gif" alt="Animated portrait of Ronald McDonalds by Loogart" title="Ronald McDonald" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/loog-mr-bean.gif" alt="Animated portrait of comedian Mr. Bean by Loogart" title="Mr. Bean" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-colonel-sanders-kfc-hires.gif" alt="Animated portrait of KFC's Colonel Sanders by Loogart" title="Colonel Sanders" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-mr-bean-hires.gif" alt="Animated portrait of comedian Mr. Bean by Loogart" title="Mr. Bean" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-ice-cube-nwa.gif" alt="Animated portrait of Hip Hop Rap artist Ice Cube" title="Ice Cube" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/loog-ironman.gif" alt="Animated portrait of Ironman by Loogart" title="Ironman" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-ironman-hires.gif" alt="Animated portrait of Ironman by Loogart" title="Ironman" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-pug.jpg" alt="Portrait of a cute pug by Loogart" title="Cute pug" data-action="zoom">
@@ -122,42 +118,167 @@
                     <img class="img-responsive lazy" data-original="img/loogs/loog-spiderman.gif" alt="Animated portrait of Spiderman by Loogart" title="Spiderman" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/loog-batman.gif" alt="Animated portrait of Batman by Loogart" title="Batman" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-batman-hires.gif" alt="Animated portrait of Batman by Loogart" title="Batman" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-adele.png" alt="portrait of singer Adele" title="Adele" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-angelina-jolie.png" alt="portrait of Angeline Jolie as Tomb Raider" title="Angelina Jolie" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-austin-powers.png" alt="portrait of austin powers" title="Austin Powers" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-batman-adamwest.png" alt="portrait of actor Adam West as batman" title="Batman (Adam West)" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-bear-grylls.png" alt="portrait of actor Bear Grylls" title="Bear Grylls" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-biggie-smalls.png" alt="portrait of rapper Biggie Smalls" title="Notorious B.I.G." data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-bill-nye.png" alt="portrait of actor Bill Nye the Science Guy" title="Bill Nye the Science Guy" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-bob-marley.jpg" alt="portrait of singerBob Marley" title="Bob Marley" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-brad-pitt.png" alt="portrait of actor Brad Pitt" title="Brad Pitt" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-britney-spears.png" alt="portrait of pop singer Britney Spears" title="Britney Spears" data-action="zoom">
                 </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-cabbie-richards.png" alt="portrait of Sports TV personality Cabbie Richards" title="Cabbie Richards" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-captain-america.png" alt="portrait of Captain America" title="Captain America" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-captain-kirk.png" alt="portrait of Captain Kirk" title="Captain Kirk" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-celine-dion.png" alt="portrait of singer Celine Dion" title="Celine Dion" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-charlie-chaplin.gif" alt="animated portrait of comedian Charlie Chaplin" title="Charlie Chaplin" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-darth-vader.png" alt="portrait of Darth Vader" title="Darth Vader" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-david-st-jacques.png" alt="portrait of Astronaut David Saint-Jacques" title="David Saint-Jacques" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-deadmau5.png" alt="portrait of DJ Deadmau5" title="Deadmau5" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-deadpool.png" alt="portrait of superhero Deadpool" title="Deadpool" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-derozan.png" alt="portrait of Demar DeRozan from the Toronto Raptors" title="DeRozan" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-donald-trump.png" alt="portrait of Donald Trump" title="Donald Trump" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-dr-dre.gif" alt="portrait of hip hop producer Dr. Dre" title="Dr. Dre" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-dr-evil.png" alt="portrait of Dr. Evil" title="Dr. Evil" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-drake.png" alt="portrait of hip hop artist Drake" title="Drake" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-eddie-murphy.png" alt="portrait of actor-comedian Eddie Murpy" title="Eddie Murphyloog-edwin-encarnacion.png" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-edwin-encarnacion.png" alt="portrait of baseball player Edwin Encarnacion" title="Edwin Encarnacion" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-ellen-degeneres.png" alt="portrait of TV personality Ellen Degeneres" title="Ellen Degeneres" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-elon-musk.jpg" alt="portrait of genius Elon Musk from Tesla" title="Elon Musk" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-eminem.gif" alt="animated portrait of Slim Shady Eminem" title="Eminem" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-eugenie-bouchard.png" alt="portrait of tennis superstar Eugenie Bouchard" title="Eugenie Bouchard" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-hillary-clinton.png" alt="portrait of Hillary Clinton" title="Hillary Clinton" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-hulk.png" alt="portrait of superhero the Hulk" title="The Incredible Hulk" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-jack-nicholson.gif" alt="animated portrait of legendary actor Jack Nicholson" title="Jack Nicholson" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-jose-bautista.png" alt="portrait of baseball player Jose Bautista" title="Jose Bautista" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-julia-roberts.gif" alt="animated portrait of Julia Roberts" title="Julie Roberts" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-justin-trudeau.gif" alt="animated portrait of Justin Trudeau" title="Justin Trudeau" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-kanye-west.png" alt="portrait of the new Kanye West" title="Kanye West" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-kendrick-lamar.png" alt="portrait of rapper Kendrick Lamar" title="Kendrick Lamar" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-kevin-durant.png" alt="portrait of NBA superstar MVP Kevin Durant" title="Kevin Durant" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-kobe-bryant.png" alt="portrait of NBA Legden Kobe Bryant" title="Kobe Bryant" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-kyle-lowry.png" alt="portrait of NBA player Kyle Lowry" title="Kyl Lowry" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-lady-gaga.png" alt="portrait of superstar singer Lady Gaga" title="Lady Gaga" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-lebron-james.gif" alt="animated portrait of NBA superstar player LeBron James" title="LeBron James" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                </div>
+
             </div>
 
         </section>
 
+        <div class="row">
+            <div class="container">
+                <p class="cta-back">
+                    <a href="../index.html" role="button">Back to homepage</a>
+                </p>
+            </div>
+        </div>
 
     </div>
     <!-- /container -->
