completed adding all loogs on Loog a day page

--- a/portraits-loog-a-day.html
+++ b/portraits-loog-a-day.html
@@ -67,7 +67,7 @@
         </div>
 
 
-        <!-- Portfolio section -->
+        <!-- Loog section -->
 
         <section class="loog-collection">
 
@@ -250,28 +250,101 @@
                     <img class="img-responsive lazy" data-original="img/loogs/loog-lebron-james.gif" alt="animated portrait of NBA superstar player LeBron James" title="LeBron James" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-marilyn-monroe.gif" alt="animated portrait of Marilyn Monroe" title="Marilyn Monroe" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-michael-jordan.png" alt="portrait of NBA Hall of Famer Michael Jordan" title="Michael Jordan" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-michaeljackson.png" alt="portrait of Michael Jackson in Bad" title="Michael Jackson (BAD)" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-michelle-obama.png" alt="portrait of Michelle Obama" title="Michelle Obama" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-mr-rogers.png" alt="portrait of Mr. Rogers" title="Mr. Rogers" data-action="zoom">
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <img class="img-responsive lazy" data-original="img/loogs/" alt="" title="" data-action="zoom">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-muhammad-ali.png" alt="portrait of boxing legend Muhammad Ali" title="Muhammad Ali" data-action="zoom">
                 </div>
-
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-obama.png" alt="portrait of Barack Obama" title="Barack Obama" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-oleksiak.png" alt="portrait of Olympic Swimmer Penny Oleksiak" title="Penny Oleksiak" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-oprah-winfrey.png" alt="portrait of Oprah Winfrey" title="Oprah Winfrey" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-pablo-escobar.png" alt="portrait of Pablo Escobar" title="Pablo Escobar" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-patrick-roy.gif" alt="animated portrait of NHL legendary goalie Patrick Roy" title="Patrick Roy" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-pokemon-go.png" alt="portrait of the Pokemon Go Dude" title="Pokemon Go" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-pope-francis.png" alt="portrait of Pope Francis" title="Pope Francis" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-power-ranger-red.png" alt="portrait of the Red Power Ranger" title="Power Rangers (Red)" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-prince.png" alt="portrait of singer Prince" title="Prince" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-rihanna.png" alt="portrait of Rihanna" title="Rihanna (Umbrella)" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-ronaldo.gif" alt="portrait of soccer superstar Cristiano Ronaldo" title="Cristiano Ronaldo" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-shaq.png" alt="portrait of NBA superstar Shaquille O'Neil" title="Shaquille O'Neil" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-spock.png" alt="portrait of Star Trek character Spock" title="Spock" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-statue-of-liberty.png" alt="portrait of the Statue of Liberty" title="Statue of Liberty" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-steph-curry.png" alt="portrait of NBA superstar Stephen Curry" title="Chef Curry" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-steve-jobs.png" alt="portrait of Apple Founder Steve Jobs" title="Steve Jobs" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-superman.png" alt="portrait of Superman" title="Superman" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-taylor-swift.png" alt="portrait of singer Taylor Swift" title="Taylor Swift" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-theweeknd.png" alt="portrait of RnB artist The Weeknd" title="The Weeknd" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-tim-cook.png" alt="portrait of Apple CEO Tim Cook" title="Tim Cook" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-usain-bolt.png" alt="portrait of Olympian Usain Bold" title="Usain Bolt" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-vladimir-guerrero.png" alt="portrait of baseball superstar Vladimir Guerrero" title="Vadimir Guerrero" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-walter-white.png" alt="portrait of Breaking Bad Protagonist Walter White" title="Walter White" data-action="zoom">
+                </div>
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <img class="img-responsive lazy" data-original="img/loogs/loog-yoda.png" alt="portrait of Yoda from Star Wars" title="Yoda" data-action="zoom">
+                </div>
             </div>
 
         </section>
 
+        <!-- Navigation -->
+       
         <div class="row">
             <div class="container">
                 <p class="cta-back">
