--- a/projects/car2go-cityline-illustration.html
+++ b/projects/car2go-cityline-illustration.html
@@ -8,7 +8,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="CityLine illustration commissioned by car2go Montréal for partner giveaways, accessories and print.">
     <meta name="author" content="Chris Soueidan of Loogart">
-    <link rel="icon" href="../../favicon.ico">
+    <meta property="og:title" content="car2go CityLine by Loogart">
+    <meta property="og:description" content="CityLine illustration for car2go in Montreal">
+    <meta property="og:url" content="http://loogart.com/">
+    <meta property="og:image" content="http://loogart.com/version2/portfolio/img/portfolio/ets/ets-cityline-full.jpg">
+    <link rel="icon" href="favicon.ico">
 
     <title>car2go CityLine Illustration | Loogart</title>
 
@@ -53,87 +57,68 @@
 
     <!-- champion image -->
     <div class="project-jumbotron project-car2go-cityline-img">
-
-
     </div>
 
+    <div class="container-fluid">
 
-    <div class="container">
-
-        <!-- Jumbotron section -->
-
+        <!-- back to home page -->
         <div class="row">
-            <div class="container">
+            <div class="col-md-6 col-md-offset-3">
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
-                <h1>car2go CityLine Illustration</h1>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium corrupti ab sapiente quas, aperiam, ducimus ut qui laudantium eveniet atque harum dolore ipsum voluptas ea modi vel dolor nostrum ullam.</h4>
             </div>
         </div>
 
-
-        <!-- Portfolio section -->
-
+        <!-- Content section -->
         <section class="portfolio-content">
 
+            <!-- First section: Starbucks Montreal -->
             <div class="row">
-
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/logo-car2go.png" style="width:200px">
-                    <h3>Title Half</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
+                <div class="col-md-6 col-md-offset-3">
+                    <img class="img-responsive" src="../img/logo-car2go.png" style="max-width:144px;margin:30px 0">
+                    <h1>car2go CityLine Illustration</h1>
+                    <p>car2go reached out to <a href="http://www.station16gallery.com" target="_blank">Station 16 Art Gallery</a> in Montreal to commission Loogart to create its own CityLine illustration to be used on promotional products for a company event.</p>
                 </div>
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <h3>Title Half</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
-                </div>
-                <div class="col-sm-12">
-                    <h3>Title Full</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum repellendus similique quidem eaque voluptas, aut velit excepturi. Unde rerum, quod quis iure ex, cum voluptas fuga consequuntur minima quisquam voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi minima fuga, voluptas nobis nostrum pariatur hic, placeat reprehenderit dolorem culpa, mollitia vero tempora inventore quod laboriosam quidem odio deserunt reiciendis.</p>
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                </div>
-                <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi vel totam labore, magni optio amet illo corporis sequi unde. Ex dicta, mollitia temporibus officia exercitationem! Blanditiis quos iusto dicta et.</p>
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                </div>
-                <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                </div>
-
-
             </div>
-
-        </section>
-
-
-        <!-- Portfolio scroller section -->
-
-        <section class="portfolio-content">
             <div class="row">
-                <div class="container">
-                    <h3>Photography of final project</h3>
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa itaque ipsum velit quam officiis repudiandae molestiae, laborum voluptatibus tenetur, reiciendis, neque iure possimus perspiciatis obcaecati consectetur facere. Distinctio, provident!</h4>
-                    <div class="scroll">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
+                <div class="carousel">
+                    <div class="ets-carousel" data-flickity='{ "freeScroll": true }'>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/car2go/car2go-cityline-2.jpg" alt="ets-montreal-cityline-by-loogart" title="ETS CityLine illustration by Loogart">
+                        </div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/car2go/car2go-cityline-1.jpg" alt="ets-montreal-cityline-by-loogart" title="ETS CityLine illustration by Loogart">
+                        </div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/car2go/car2go-cityline-2-blue-sky.jpg" alt="ets-montreal-cityline-by-loogart" title="ETS CityLine illustration by Loogart">
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <!-- Second section: Other Cities CityLines -->
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3>The Smart Car</h3>
+                    <p>Using car2go's branding, color palette and popular Smart Car vehicle, Loogart was able to integrate the Montreal scene with the company's visual cues. The Smart Car was illusrated in the style of the the CityLine with bold lines and circular anchors.</p>
+                    <img class="img-responsive" src="../img/portfolio/car2go/car2go-car-real.jpg" data-action="zoom">
+                    <p>Loogart's version of car2go' Smart Car can be seen below.</p>
+                    <img class="img-responsive img-portfolio" src="../img/portfolio/car2go/car2go-smart-car.png" data-action="zoom" style="margin:69px auto;max-width:280px">
+                </div>
+            </div>
+
+            <!-- fourth section: Story about artwork -->
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3>CityLine Versions</h3>
+                    <p>The original version had a very strong spotlight on Little Italy due to its contrasting colors and the fact that I included two cars in one design. The final design, where I refined the visual balance, includes the graffiti style "Montreal" text which in my opinion makes the design so much cooler!</p>
+                </div>
+            </div>
+
         </section>
 
-        <!-- in-portfolio navigation -->
-
+        <!-- back to home page -->
         <div class="row">
             <div class="container">
                 <p class="cta-back">
@@ -144,6 +129,7 @@
 
     </div>
     <!-- /container -->
+
 
     <!-- footer -->
     <footer>
@@ -195,6 +181,7 @@
     <script src="../js/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/zoom.min.js"></script>
+    <script src="../js/flickity.pkgd.min.js"></script>
     <script src="../js/loogart.js"></script>
 </body>
 
